--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,8 +5,8 @@
 
 @font-face {
   font-family: 'Rubik';
-  src: url('@/assets/fonts/rubik-medium.woff') format('woff'),
-  url('@/assets/fonts/rubik-medium.woff') format('woff2');
+  src: url('/rubik-medium.woff') format('woff'),
+  url('/rubik-medium.woff2') format('woff2');
   font-weight: 600;
   font-style: normal;
   font-display: swap;
@@ -15,8 +15,8 @@
 
 @font-face {
   font-family: 'Rubik';
-  src: url('@/assets/fonts/rubik-regular.woff') format('woff'),
-  url('@/assets/fonts/rubik-regular.woff') format('woff2');
+  src: url('/rubik-regular.woff') format('woff'),
+  url('/rubik-regular.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
