--- a/src/components/PerformanceWidget/index.module.scss
+++ b/src/components/PerformanceWidget/index.module.scss
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 0px;
-  
+
 
   &-header {
     display: flex;
@@ -127,5 +127,32 @@
         }
       }
     }
+  }
+}
+
+.new-tooltip-content {
+  padding: 8px 16px;
+  background-color: #fff;
+  border-radius: 8px;
+  border: 1px solid rgb(224, 220, 229);
+  box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 0.08);
+  color: #000;
+  font-size: 12px;
+  font-weight: 400;
+  letter-spacing: -0.01em;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 23px;
+    left: -7px;
+    width: 10px;
+    height: 10px;
+    border-left: 1px solid rgb(224, 220, 229);
+    border-bottom: 1px solid rgb(224, 220, 229);
+    background-color: #fff;
+
+    transform: rotate(45deg) translateY(-50%);
+    z-index: 1;
   }
 }
