--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -4,6 +4,7 @@
   background-color: rgb(255, 255, 255);
   flex-grow: 1;
   border-radius: 6px;
+  min-width: 500px;
 
   &-filter {
     display: grid;
@@ -13,6 +14,13 @@
   }
 
   &-widgets {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 16px;
+    margin-bottom: 16px;
+  }
+
+  &-widgets-2 {
     display: grid;
     grid-template-columns: 1fr;
     gap: 16px;
@@ -40,6 +48,10 @@
 
     &-widgets {
       grid-template-columns: repeat(2, 1fr);
+    }
+
+    &-widgets-2 {
+      grid-template-columns: repeat(3, 1fr);
     }
   }
 }
